@@ -1,9 +1,0 @@
-@comment $NetBSD: PLIST,v 1.6 2012/04/08 20:21:45 wiz Exp $
-${PYSITELIB}/${EGG_FILE}
-${PYSITELIB}/pyfann/__init__.py
-${PYSITELIB}/pyfann/__init__.pyc
-${PYSITELIB}/pyfann/__init__.pyo
-${PYSITELIB}/pyfann/_libfann.so
-${PYSITELIB}/pyfann/libfann.py
-${PYSITELIB}/pyfann/libfann.pyc
-${PYSITELIB}/pyfann/libfann.pyo
